# coverage-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  README.md  coverage-badge.sh  coverage-xml.sh  pyproject.toml  test.py
.github/workflows/: ci.yml
coverage_pre_commit/: coverage_badge.py  coverage_xml.py  utils.py
